--- a/Lab1/report/report.tex
+++ b/Lab1/report/report.tex
@@ -69,7 +69,7 @@ This yields us the following table of correlation coefficients:
 		The two features for which the correlation is the second largest are the second and third column, respectively the height and the weight.
 		\centering
 		\includegraphics[width=\linewidth]{plot_1_3_b.png}
-		\caption{Scatterplot of weight to age}
+		\caption{Scatterplot of weight to age.}
 		\label{fig1.3b}
 	\end{subfigure}
 	\caption{}
@@ -123,7 +123,7 @@ hd_d = hd_d/30;
 \begin{figure}[H]
 	\centering
 	\includegraphics[width=\linewidth]{plot2_4.png}
-	\caption{Dus..}
+	\caption{Histogram of sets S and D.}
 	\label{fig2.4}
 \end{figure}
 Figure \ref{fig2.4} shows the histogram of sets S and D. The figure shows that the two distributions overlap very little, most of it around $hd = 5,6$.
@@ -143,10 +143,17 @@ The means and variances of both of the sets are the following:
  \caption{Means and variances of both of the sets}
  \label{tab2.5}
 \end{table}
-The prior probability of two bits being the same between persons the following is: $1-0.4946=0.5054$.
+\noindent The prior probability of two bits being the same between persons the following is: $1-0.4946=0.5054$.
 Using the formula $n=p(1-p)/\sigma^2$ we get $n=(0.4946*(1-0.4946))/(0.0886^2)\approx 31.84$ statistically independent bits that are needed to encode an iris pattern. This means that the current number of bits in the iris vectors is insufficient.
 
 \subsection{}
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=\linewidth]{2_6.png}
+	\caption{The histograms of sets S and D plotted with two Gaussian functions using the mean and variances.}
+	\label{fig2.6}
+\end{figure}
+Figure \ref{fig2.6} shows the plot of the combined histograms and gaussian functions (note that the plot is slightly different from the previous subsections, because we reran the script in Matlab). The scaling is done by dividing the maximum value of the D and S sets by the maximum value of the initial Gaussian functions. This way the maximum value of the new Gaussian functions is the same as the maximum value of the D and S sets, so that the the Gaussians are nicely scaled to the histograms.
 
 \subsection{}
 \subsection{}
