--- a/Lab1/report/report.tex
+++ b/Lab1/report/report.tex
@@ -160,7 +160,7 @@ Figure \ref{fig2.6} shows the plot of the combined histograms and gaussian funct
 
 \section{Assignment 3}
 \subsection{Background}
-The topic of biometric identification has been receiving a lot of attention lately.
+The topic of biometric identification has been receiving a lot of attention lately. % Mooie opening xD
 The use of fingerprints, facial features, and iris recognition are considered appropriate for identification.
 Of these three, fingerprints and iris recognition are considered to be more accurate than facial features,
 while facial featuresare more flexible, e.g.\ for the use in surveillance scenarios.
