--- a/Lab1/report/report.tex
+++ b/Lab1/report/report.tex
@@ -11,7 +11,7 @@
 \renewcommand{\thesubsubsection}{\alph{subsubsection}}
 
 \title{Pattern Recognition practical 1}
-\author{Maikel Withagen \and Steven Bosch}
+\author{Maikel Withagen (s1867733) \and Steven Bosch (s1861948)}
 \date{September 2015}
 \lstset{frame=single, numbers=left,language=Matlab}
 
@@ -147,6 +147,28 @@ The means and variances of both of the sets are the following:
 Using the formula $n=p(1-p)/\sigma^2$ we get $n=(0.4946*(1-0.4946))/(0.0886^2)\approx 31.84$ statistically independent bits that are needed to encode an iris pattern. This means that the current number of bits in the iris vectors is insufficient.
 
 \subsection{}
+We used the following Matlab code to create the graph in figure \ref{fig2.6}:
+\begin{lstlisting}
+hold off;
+
+% Making the histogram
+hd = [hd_s;hd_d].'
+hist(hd,30); xlabel('Hamming distance'), ylabel('Count');
+hold on;
+
+% Create scaled Gaussian plots
+x2 = sum(hd_s(:) == mode(hd_s));
+normd = normpdf([0:0.01:1],mean(hd_s),std(hd_s));
+plot([0:0.01:1],normd*(x2/max(normd)));
+
+x1 = sum(hd_d(:) == mode(hd_d));
+normd = normpdf([0:0.01:1],mean(hd_d),std(hd_d));
+plot([0:0.01:1],normd*(x1/max(normd)));
+
+legend('hd_s', 'hd_d', 'hd_s normd', 'hd_d normd');
+\end{lstlisting}
+
+
 \begin{figure}[H]
 	\centering
 	\includegraphics[width=\linewidth]{2_6.png}
@@ -156,6 +178,9 @@ Using the formula $n=p(1-p)/\sigma^2$ we get $n=(0.4946*(1-0.4946))/(0.0886^2)\a
 Figure \ref{fig2.6} shows the plot of the combined histograms and gaussian functions (note that the plot is slightly different from the previous subsections, because we reran the script in Matlab). The scaling is done by dividing the maximum value of the D and S sets by the maximum value of the initial Gaussian functions. This way the maximum value of the new Gaussian functions is the same as the maximum value of the D and S sets, so that the the Gaussians are nicely scaled to the histograms.
 
 \subsection{}
+\subsubsection{}
+
+
 \subsection{}
 
 \section{Assignment 3}
