--- a/Lab1/report/report.tex
+++ b/Lab1/report/report.tex
@@ -78,10 +78,10 @@ An increase in weight seems to correspond to a (somewhat linear) increase in hei
 A similar kind of relationship can be seen in figure \ref{fig1.3b}, between the factors weight and age.
 
 \section{Assignment 2}
-\subsection{Sets S and D}
+\subsection{}
 The following subsections show the code we used to acquire the 1000 Hamming distances for set S and D.
 \subsubsection{}
-To compute the set S we first create the set and fill it with zeros (line 1). Then for every element in the set we randomly pick a person and two random rows within that person and consequently load the actual content of these rows (lines 2-9). Then we compute the hamming distance for those two rows and store it within the appropriate place in the set (line 11). Finally the whole set is scaled so that every element in the set reflects the hamming distance between two elements instead of two rows.
+To compute the set S we first create the set and fill it with zeros (line 1). Then for every element in the set we randomly pick a person and two random rows within that person and consequently load the actual content of these rows (lines 2-9). Then we compute the hamming distance between those two rows and store it within the appropriate place in the set (line 11). Finally the whole set is scaled so that every element in the set reflects the hamming distance between two elements instead of two rows.
 \begin{lstlisting}[title = Code for set S]
 hd_s = zeros(1,1000);
 for i = 1:1000
@@ -98,7 +98,7 @@ end
 hd_s = hd_s/30;
 \end{lstlisting}
 \subsubsection{}
-To compute the set D we first create the set and fill it with zeros (line 1). Then for every element in the set we randomly pick two persons and two random rows within that person and consequently load the actual content of these rows (lines 2-9). Then we compute the hamming distance for those two rows and store it within the appropriate place in the set (line 11). Finally the whole set is scaled so that every element in the set reflects the hamming distance between two elements instead of two rows.
+To compute the set D we do the same thing except for the fact that we compute the hamming distances between rows of two different persons:
 \begin{lstlisting}[title = Code for set D]
 hd_d = zeros(1,1000);
 for i = 1:1000
@@ -118,10 +118,10 @@ end
 hd_d = hd_d/30;
 \end{lstlisting}
 
-\subsection{Histogram}
+\subsection{}
 \begin{figure}[H]
 	\centering
-	\includegraphics[width=\linewidth]{plot2_4.png}
+	\includegraphics[width=.7\linewidth]{plot2_4.png}
 	\caption{Histogram of sets S and D.}
 	\label{fig2.4}
 \end{figure}
@@ -142,7 +142,7 @@ The means and variances of both of the sets are the following:
  \caption{Means and variances of both of the sets}
  \label{tab2.5}
 \end{table}
-\noindent The prior probability of two bits being the same between persons the following is: $1-0.4946=0.5054$.
+\noindent The prior propability of two bits being the same between persons the following is: $1-0.4946=0.5054$.
 Using the formula $n=p(1-p)/\sigma^2$ we get $n=(0.4946*(1-0.4946))/(0.0886^2)\approx 31.84$ statistically independent bits that are needed to encode an iris pattern. This means that the current number of bits in the iris vectors is insufficient.
 
 \subsection{}
@@ -150,7 +150,7 @@ We acquired the graph in figure \ref{fig2.6} (see the appendix for the matlab co
 
 \begin{figure}[H]
 	\centering
-	\includegraphics[width=\linewidth]{2_6.png}
+	\includegraphics[width=.7\linewidth]{2_6.png}
 	\caption{The histograms of sets S and D plotted with two Gaussian functions using the mean and variances.}
 	\label{fig2.6}
 \end{figure}
@@ -160,12 +160,24 @@ Figure \ref{fig2.6} shows the plot of the combined histograms and gaussian funct
 \subsubsection{}
 To estimate the value of the decision criterion we used the following code:
 \begin{lstlisting}
-
+% Calculate the cumulative distribution function for the 
+% given x-value (range 0.000 - 1.000, with stepsize 0.001)
+normc = normcdf([0:0.001:1],mean(hd_d),std(hd_d));
+% Count the amount of x-values below the threshold value, minus 1 to correct 
+% from starting from 0.000, and divide by 1000 to get the decision criterion
+d = (sum(normc(:) <= 0.0005)-1)/1000;
 \end{lstlisting}
-This yielded the following value for the criterion: 0.185. This means that below a hamming distance of 0.185, we will erroneously classify two irisses as being from the same person.
+This yielded the value 0.185 as criterion. This means that below a hamming distance of 0.185, we will erroneously classify two irisses as being from the same person.
 
 \subsection{}
-Using the criterion of 0.185, we get a false rejection rate of 0.0072.
+Using the criterion of 0.185, we get a false rejection rate of 0.0072, using the following code:
+\begin{lstlisting}
+% Same as before, now for set S
+normc = normcdf([0:0.001:1],mean(hd_s),std(hd_s));
+% False rejection is integral of HD > d is 1 - normc(d)
+1 - normc((d*1000)+1)
+\end{lstlisting}
+This means that up to 0.72\% is falsely classified as being from two different persons.
 
 \section{Assignment 3}
 \subsection{Background}
@@ -186,6 +198,7 @@ and a combination of the sources gives a significant improvement over their indi
 \bibliography{cite}
 
 \section*{Appendix}
+Code for assignment 2.4:
 \begin{lstlisting}
 hold off;
 
