--- a/Lab1/report/report.tex
+++ b/Lab1/report/report.tex
@@ -170,14 +170,25 @@ d = (sum(normc(:) <= 0.0005)-1)/1000;
 This yielded the value 0.185 as criterion. This means that below a hamming distance of 0.185, we will erroneously classify two irisses as being from the same person.
 
 \subsection{}
-Using the criterion of 0.185, we get a false rejection rate of 0.0072, using the following code:
+Using the criterion of 0.185, we get a false rejection rate of 0.00072, using the following code:
 \begin{lstlisting}
 % Same as before, now for set S
 normc = normcdf([0:0.001:1],mean(hd_s),std(hd_s));
 % False rejection is integral of HD > d is 1 - normc(d)
 1 - normc((d*1000)+1)
 \end{lstlisting}
-This means that up to 0.72\% is falsely classified as being from two different persons.
+This means that up to 0.072\% is falsely classified as being from two different persons.
+
+\subsection{}
+Using the code that is given in the appendix we get a minimum hamming distance of $0$, which we find in person 5, row 1. Indeed, every known bit in testperson is the same as the bit in the same place in person 5, row 1.
+\begin{lstlisting}
+>> load(sprintf('person%02d.mat',5))
+>> iriscode(1,:)
+ans = 0     1     0     1     0     1     0     1     1     1     0     0     1     1     0     1     0     1     0     1     0     1     0     1     1     1     0     0     0     0
+>> x
+x =   0     2     0     2     0     1     0     1     1     1     2     0     2     1     0     2     0     2     0     1     0     2     0     1     2     2     0     0     2     0
+\end{lstlisting}
+
 
 \section{Assignment 3}
 \subsection{Background}
@@ -218,4 +229,44 @@ plot([0:0.01:1],normd*(x1/max(normd)));
 
 legend('hd_s', 'hd_d', 'hd_s normd', 'hd_d normd');
 \end{lstlisting}
+
+Code for assignment 2.6:
+\begin{lstlisting}
+% Load the testperson's iriscode
+load(sprintf('testperson.mat')); 
+x = iriscode(1,:);
+
+% Initialize variables
+HDmin = 30; % HDmin starts at the maximum HD
+person = 0; % The person with the minimum HD
+row = 0; % The row within that person with HDmin
+
+% Loop over all persons
+for i = 1:20
+    load(sprintf('person%02d.mat',i));
+    % Loop over all rows within the persons
+    for j = 1:20
+       y = iriscode(j,:);
+       HDtemp = 0; % HD for this specific row
+       % Loop over every element, only the HD to HDtemp if the element in
+       % testperson is not 2 (since that bit is unknown)
+       for k = 1:30
+           if x(1,k) ~= 2
+               HDtemp = HDtemp + abs(x(1,k)-y(1,k));
+           end
+       end
+       % If the HD of the current row is the lowest, replace HDmin with
+       % that and update the person and row
+       if HDtemp < HDmin
+           HDmin = HDtemp;
+           person = i;
+           row = j;
+       end
+    end
+end
+% Scale HDmin to the amount of known bits in testperson (which is 20,
+% because there are 10 unknown bits)
+HDmin = HDmin/20;
+\end{lstlisting}
+
 \end{document}
