--- a/Lab1/report/report.tex
+++ b/Lab1/report/report.tex
@@ -180,7 +180,7 @@ normc = normcdf([0:0.001:1],mean(hd_s),std(hd_s));
 This means that up to 0.072\% is falsely classified as being from two different persons.
 
 \subsection{}
-Using the code that is given in the appendix we get a minimum hamming distance of $0$, which we find in person 5, row 1. Indeed, every known bit in testperson is the same as the bit in the same place in person 5, row 1.
+Using the code in the appendix we get a minimum hamming distance of $0$, which we find in person 5, row 1. Indeed, every known bit in testperson is the same as the bit in the same place in person 5, row 1.
 \begin{lstlisting}
 >> load(sprintf('person%02d.mat',5))
 >> iriscode(1,:)
@@ -188,7 +188,7 @@ ans = 0     1     0     1     0     1     0     1     1     1     0     0     1 
 >> x
 x =   0     2     0     2     0     1     0     1     1     1     2     0     2     1     0     2     0     2     0     1     0     2     0     1     2     2     0     0     2     0
 \end{lstlisting}
-
+Since HDmin is $0$, there is no HD for which $HD <= HDmin$ hence the integral is $0$ and  the significance level is also 0\%.
 
 \section{Assignment 3}
 \subsection{Background}
@@ -264,7 +264,7 @@ for i = 1:20
        end
     end
 end
-% Scale HDmin to the amount of known bits in testperson (which is 20,
+% Normalize HDmin to the amount of known bits in testperson (which is 20,
 % because there are 10 unknown bits)
 HDmin = HDmin/20;
 \end{lstlisting}
