updated report lab1

--- a/Lab1/report/cite.bib
+++ b/Lab1/report/cite.bib
@@ -8,3 +8,36 @@
   year={2003},
   publisher={IEEE}
 }
+@inproceedings{akkermans2005acoustic,
+  title={Acoustic ear recognition for person identification},
+  author={Akkermans, Anton HM and Kevenaar, Tom AM and Schobben, Daniel WE},
+  booktitle={Automatic Identification Advanced Technologies, 2005. Fourth IEEE Workshop on},
+  pages={219--223},
+  year={2005},
+  organization={IEEE}
+}
+@inproceedings{bustard2008robust,
+  title={Robust 2D ear registration and recognition based on SIFT point matching},
+  author={Bustard, John D and Nixon, Mark S},
+  booktitle={Biometrics: Theory, Applications and Systems, 2008. BTAS 2008. 2nd IEEE International Conference on},
+  pages={1--6},
+  year={2008},
+  organization={IEEE}
+}
+@inproceedings{akkermans2005acoustic,
+  title={Acoustic ear recognition for person identification},
+  author={Akkermans, Anton HM and Kevenaar, Tom AM and Schobben, Daniel WE},
+  booktitle={Automatic Identification Advanced Technologies, 2005. Fourth IEEE Workshop on},
+  pages={219--223},
+  year={2005},
+  organization={IEEE}
+}
+@inproceedings{lowe1999object,
+  title={Object recognition from local scale-invariant features},
+  author={Lowe, David G},
+  booktitle={Computer vision, 1999. The proceedings of the seventh IEEE international conference on},
+  volume={2},
+  pages={1150--1157},
+  year={1999},
+  organization={IEEE}
+}
